hphp/hack/test/typecheck/tconst/parent_test.php.exp
File "parent_test.php", line 26, characters 25-26:
Invalid argument (Typing[4110])
File "parent_test.php", line 14, characters 18-20:
Expected int
File "parent_test.php", line 8, characters 39-45:
  resulting from expanding the type constant this::T
File "parent_test.php", line 26, characters 25-26:
But got string
